<resources>
    <string name="app_name">Dungeon Share</string>
    <string name="welcome">Welcome to Dungeon Share!</string>
    <string name="my_dungeons">My Dungeons</string>
    <string name="play_dungeon">Play Dungeon</string>
    <string name="look_for_dungeon">Look for Dungeon</string>
    <string name="about_app">About App</string>
    <string name="new_dungeon">New Dungeon</string>
    <string name="chat">Chat</string>
    <string name="enter_your_name_and_the_name_of_the_dungeon">Enter your name and the name of the dungeon!</string>
    <string name="select_a_dungeon">Select a dungeon to join</string>
    <string name="enter_name_and_share_code">Enter your name and the dungeon\'s share code!</string>
    <string name="cont">continue</string>
    <string name="dm_name">DM Name</string>
    <string name="player_name">Player Name</string>
    <string name="dungeon_name">Dungeon Name</string>
    <string name="add_new_room">add new room</string>
    <string name="room_name">Room Name</string>
    <string name="visible_to_players">Visible to Players</string>
    <string name="room_description">Room Description</string>
    <string name="done">done</string>
    <string name="share_code">Share Code</string>
    <string name="start_a_dungeon_share">Start a Dungeon Share</string>
    <string name="mark_for_deletion">Mark For Deletion</string>
</resources>